"lib/ChangeLog"

2006-10-17	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-28:
	  alternator.hac: added missing literal in a cross-couple feedback term,
		replaced dynamic drive of an acknowledge with inverter pair.


2006-09-27	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-24:
	  Alternating buckets generalized to Nxe1of1,
		and token eaters generalized to e1ofN channels.  


2006-09-19	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-23:
	  Generalized alternator splits/merge/tree-fifos to e1ofN channels.


2006-09-18	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-22:
	  alternator.hac: definitions for token repeaters, 2-for-1 producers, 
		two different reshufflings, both decent, one more intuitive.
		Also defined their chains tor 2^K repeaters.  
	  env.hac: 'ev'-style buckets added, wrapped around e1of1 buckets, 
		also includes inactive_reset variants.  
	  Also started mpl/ directory for template metaprogramming constructs.  


2006-09-17	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-21:
	  Detected and fixed potential one-time instabilities on
		several lock, source, and merge alternators, by
		reshuffling the reset phase.  
		Thanks to new reset-tests in test/lib, 
		now called by old tests and will appear in all new tests.  


2006-09-16	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-20:
	  merge.hac: (new) basic wchb merges, tested.
	  copy.hac: added and tested  basic buffered copies


	* HACKT-00-01-04-main-00-80-19:
	  alternator.hac: implemented fast alternator bucket, 
		low latency alternating merge, and
		low latency binary tree fifo (all e1of1).  
		All new tests passed.  


2006-09-15	David Fang	<fangism@users.sourceforce.net>

	* HACKT-00-01-04-main-00-80-18:
	  alternator.hac: onehot_stage reduced a pull-up rule,
		implemented faster alternators with better concurrency