@@ -3,6 +3,13 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-06-07	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-26:
+	  No source revision.  Added vim syntax highlight support.  
+	  see lib/ChangeLog.
+
+
 2007-06-04	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-25:
